--- a/game_of_words/styles.css
+++ b/game_of_words/styles.css
@@ -91,10 +91,33 @@ figure.logo {
     z-index: 0;
 }
 
-p#clue {
+p#clue,
+p#text-congratulation {
     font-size: 16px;
     text-align: center;
     color: #6b8323;
+}
+
+.btn-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0px auto;
+}
+
+.btn-wrapper input.guess-word {
+    min-width: 250px;
+    width: 100%;
+    border-radius: 6px;
+    border: 2px solid #000;
+    background: transparent;
+    box-shadow: 0 0 30px 11px #000;
+    text-align: left;
+}
+
+.btn-wrapper input.guess-word:hover {
+    border: 2px solid #000;
+    background: transparent;
 }
 
 .icon-sandglass {
@@ -105,8 +128,7 @@ p#clue {
 }
 
 .icon {
-    width: 60px;
-    cursor: pointer;
+    width: 55px;
 }
 
 .icon.icon-rotate {
@@ -114,14 +136,14 @@ p#clue {
     transition: all ease .3s;
 }
 
-.btn-wrapper {
+.inputs-wrapper {
     display: flex;
     flex-direction: column;
     margin-top: 20px;
     margin: 0 auto;
 }
 
-.btn-wrapper button {
+.inputs-wrapper input {
     width: 180px;
     background: #000;
     border: 2px solid #fff;
@@ -136,11 +158,27 @@ p#clue {
     margin-top: 20px;
 }
 
-.btn-wrapper button:hover {
+.inputs-wrapper input:hover {
     background: #fff;
     color: #000;
     border: 2px solid #fff;
 }
+
+.inputs-wrapper p {
+    margin-top: 35px;
+    color: #fff;
+    font-size: 14px;
+    animation: text-move;
+    animation-duration: .5s;
+}
+ 
+@keyframes text-move {
+    0% { transform: translate(0px, 0px); }
+    30% { transform: translate(-10px, 0px); }
+    60% { transform: translate(10px, 0px); }
+    100% { transform: translate(0px, 0px); }
+}
+
 
 /*Responsive*/
 
