--- a/game_of_words/styles/styles.css
+++ b/game_of_words/styles/styles.css
@@ -183,6 +183,88 @@ figure.logo {
     100% { transform: translate(0px, 0px); }
 }
 
+/*Login*************************************************************/
+.login .login-container {
+    margin: 250px auto 0 auto;
+    background-color: #000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px 50px;
+    max-width: 350px;
+    width: 100%;
+    border: 4px solid #565656;
+    box-shadow: 0 0 30px 11px #000;
+}
+.login .login-container img {
+   width: 60px;
+   margin-bottom: 15px;
+}
+.login h2 {
+    color: transparent;
+    background: linear-gradient(#6ee37c, #6b8323);
+    background-clip: text;
+    -webkit-background-clip: text;
+    font-size: 35px;
+    text-align: center;
+    margin-bottom: 25px;
+}
+.login p {
+    color: #ccc;
+    font-size: 28px;
+    text-align: center;
+    font-family: 'Covered By Your Grace', cursive;
+    text-shadow: 3px 4px 5px #000;
+}
+.login form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.login input {
+    color: #fff;
+    font-size: 16px;
+    font-weight: 600;
+    background: #000;
+    border: 2px solid #fff;
+    padding: 8px 12px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+.login input.input-login {
+    max-width: 250px;
+    width: 100%;
+    border-radius: 6px;
+    border: 2px solid rgb(60 59 59);
+    background: transparent;
+    text-align: left;
+    color: #fff !important;
+    cursor: auto;
+    margin-top: 10px;
+}
+.login input.input-login:hover {
+    background: transparent;
+}
+#btnLogin {
+    width: 120px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 600;
+    text-align: center;
+    background: #000;
+    border: 2px solid #fff;
+    border-radius: 20px;
+    padding: 8px 12px;
+    margin-top: 20px;
+    cursor: pointer;
+    text-decoration: none;
+}
+#btnLogin:hover {
+    background: #fff;
+    color: grey;
+    border: 2px solid #fff;
+}
+
 
 /*Responsive*/
 
