Local storage and JSON

--- a/game_of_words/styles/styles.css
+++ b/game_of_words/styles/styles.css
@@ -265,6 +265,21 @@ figure.logo {
     border: 2px solid #fff;
 }
 
+.login select {
+    height: 36px;
+    max-width: 250px;
+    width: 100%;
+    margin-top: 10px;
+    border-radius: 6px;
+    border: 2px solid rgb(60 59 59);
+    background: transparent;
+    color: #fff;
+    padding: 0 10px;
+}
+
+.login select option {
+    background: #252525;
+}
 
 /*Responsive*/
 
