--- a/game_of_words/styles/styles.css
+++ b/game_of_words/styles/styles.css
@@ -223,8 +223,8 @@ figure.logo {
 }
 .login input {
     color: #fff;
-    font-size: 16px;
-    font-weight: 600;
+    font-size: 14px;
+    font-weight: 500;
     background: #000;
     border: 2px solid #fff;
     padding: 8px 12px;
@@ -232,7 +232,7 @@ figure.logo {
     cursor: pointer;
 }
 .login input.input-login {
-    max-width: 250px;
+    max-width: 222px;
     width: 100%;
     border-radius: 6px;
     border: 2px solid rgb(60 59 59);
@@ -267,13 +267,15 @@ figure.logo {
 
 .login select {
     height: 36px;
-    max-width: 250px;
+    min-width: 250px;
     width: 100%;
     margin-top: 10px;
     border-radius: 6px;
     border: 2px solid rgb(60 59 59);
     background: transparent;
-    color: #fff;
+    color: #636363;
+    font-size: 14px;
+    font-weight: 500;
     padding: 0 10px;
 }
 
