--- a/game_of_words/styles/styles.css
+++ b/game_of_words/styles/styles.css
@@ -13,6 +13,7 @@ body {
     opacity: 0.7;
     width: 100%;
     height: 100%;
+    overflow-y: hidden;
 }
 
 .wrapper-container {
@@ -183,6 +184,7 @@ figure.logo {
     100% { transform: translate(0px, 0px); }
 }
 
+
 /*Login*************************************************************/
 .login .login-container {
     margin: 250px auto 0 auto;
@@ -196,15 +198,18 @@ figure.logo {
     border: 4px solid #565656;
     box-shadow: 0 0 30px 11px #000;
 }
+
 .login .login-container img {
    width: 60px;
    margin-bottom: 15px;
    transform: rotateY(0deg);
    transition: all 1s ease;
 }
+
 .login .login-container img:hover {
     transform: rotateY(160deg);
  }
+
 .login h2 {
     color: transparent;
     background: linear-gradient(#6ee37c, #6b8323);
@@ -214,6 +219,7 @@ figure.logo {
     text-align: center;
     margin-bottom: 25px;
 }
+
 .login p {
     color: #ccc;
     font-size: 28px;
@@ -221,11 +227,13 @@ figure.logo {
     font-family: 'Covered By Your Grace', cursive;
     text-shadow: 3px 4px 5px #000;
 }
+
 .login form {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .login input {
     color: #fff;
     font-size: 14px;
@@ -236,6 +244,7 @@ figure.logo {
     margin-top: 20px;
     cursor: pointer;
 }
+
 .login input.input-login {
     max-width: 222px;
     width: 100%;
@@ -247,9 +256,11 @@ figure.logo {
     cursor: auto;
     margin-top: 10px;
 }
+
 .login input.input-login:hover {
     background: transparent;
 }
+
 #btnLogin {
     width: 120px;
     color: #fff;
@@ -264,10 +275,17 @@ figure.logo {
     cursor: pointer;
     text-decoration: none;
 }
+
 #btnLogin:hover {
     background: #fff;
     color: grey;
     border: 2px solid #fff;
+}
+
+.hvr-shutter-out-horizontal:before {
+    content: "";
+    background: #fff !important;
+    border-radius: 20px !important;
 }
 
 .login select {
