--- a/game_of_words/styles/styles.css
+++ b/game_of_words/styles/styles.css
@@ -13,7 +13,7 @@ body {
     opacity: 0.7;
     width: 100%;
     height: 100%;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 .wrapper-container {
